--- a/ex/ex010/fundo002.html
+++ b/ex/ex010/fundo002.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personalizações do fundo</title>
+    <link rel="shortcut icon" href="imagens/pattern001.png" type="image/x-icon">
     <style>
         body {
             background-image: url(https://avatars.githubusercontent.com/u/196949894?v=4);
