--- a/ex/ex010/fundo006.html
+++ b/ex/ex010/fundo006.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Teste de Fundo</title>
+    <link rel="shortcut icon" href="imagens/pattern001.png" type="image/x-icon">
     <style>
         body {
             background-color: black;
             background-image: url(imagens/wallpaper005.jpg);
             background-position: left top;
+            background-size: 100%;
         }
 
         main {
@@ -22,7 +24,11 @@
 
         main > h1 {
             font-size: 35.5px;
-            
+            text-align: center;
+        }
+        main > p {
+            text-align: justify;
+            text-indent: 10px;
         }
     </style>
 </head>
