--- a/ex/ex010/fundo001.html
+++ b/ex/ex010/fundo001.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de Imagem de Fundo</title>
+    <link rel="shortcut icon" href="imagens/pattern001.png" type="image/x-icon">
     <style>
         body {
             background-image: url(imagens/wallpaper004.jpg);
