--- a/ex/ex010/fundo003.html
+++ b/ex/ex010/fundo003.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posições dos Fundos</title>
+    <link rel="shortcut icon" href="imagens/pattern001.png" type="image/x-icon">
     <style>
         div.bloco {
             background-image: url(imagens/wallpaper002.jpg);
