--- a/ex/ex010/fundo005.html
+++ b/ex/ex010/fundo005.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posicionamento</title>
+    <link rel="shortcut icon" href="imagens/pattern001.png" type="image/x-icon">
     <style>
         body {
             height: 97vh;
