--- a/ex/ex010/fundo006.html
+++ b/ex/ex010/fundo006.html
@@ -15,11 +15,14 @@
 
         main {
             background-color: white;
-            width: 450px;
+            width: 55%;
             padding: 10.5px;
-            margin: auto;
+            padding-left: 2%;
+            padding-right: 2%;
             border: 2px solid rgba(24, 28, 55, 0.895);
             border-radius: 25.5px;
+            margin: auto;
+            margin-top: 10%;
         }
 
         main > h1 {
