--- a/ex/ex010/index.html
+++ b/ex/ex010/index.html
@@ -13,12 +13,20 @@
         }
 
         main {
+            background-color: white;
+            box-shadow: 0px 0px 6px rgba(32, 12, 37, 0.578);
+            width: 45%;
+            padding: 15px;
+            border: 1em  outset black;
+            border-radius: 5px;
             margin: auto;
-            margin-top: 15%
+            margin-top: 10%
         }
 
         main > h1 {
             text-align: center;
+            color: rgb(29, 9, 36);
+            text-shadow: 0px 0px 6px rgba(29, 9, 36, 0.427);
         }
 
         main > ul {
@@ -34,14 +42,14 @@
 <body>
     <main>
         <h1>Brincando com Fundos</h1>
-        <ul>
-            <li><a href="fundo001.html">Acesse o primeiro tipo de fundo</a></li>
-            <li><a href="fundo002.html">Acesse o segundo tipo de fundo</a></li>
-            <li><a href="fundo003.html">Acesse o terceiro tipo de fundo</a></li>
-            <li><a href="fundo004.html">Acesse o quarto tipo de fundo</a></li>
-            <li><a href="fundo005.html">Acesse o quinto tipo de fundo</a></li>
-            <li><a href="fundo006.html">Acesse o sexto tipo de fundo</a></li>
-        </ul>
+            <ul>
+                <li><a href="fundo001.html">Acesse o primeiro tipo de fundo</a></li>
+                <li><a href="fundo002.html">Acesse o segundo tipo de fundo</a></li>
+                <li><a href="fundo003.html">Acesse o terceiro tipo de fundo</a></li>
+                <li><a href="fundo004.html">Acesse o quarto tipo de fundo</a></li>
+                <li><a href="fundo005.html">Acesse o quinto tipo de fundo</a></li>
+                <li><a href="fundo006.html">Acesse o sexto tipo de fundo</a></li>
+            </ul>
     </main>
 </body>
 </html>
