Criação de mais um tipo de fundo

--- a/ex/ex010/index.html
+++ b/ex/ex010/index.html
@@ -49,6 +49,7 @@
                 <li><a href="fundo004.html">Acesse o quarto tipo de fundo</a></li>
                 <li><a href="fundo005.html">Acesse o quinto tipo de fundo</a></li>
                 <li><a href="fundo006.html">Acesse o sexto tipo de fundo</a></li>
+                <li><a href="fundo007.html">Acesse o sétimo tipo de fundo</a></li>
             </ul>
     </main>
 </body>
