--- a/ex/ex008/index.html
+++ b/ex/ex008/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tipos de Fontes</title>
+    <title>Tipos de Cores</title>
     <style>
         body {
-            background-color: rgba(155, 155, 240, 0.752);
+            background-color: rgba(232, 226, 159, 0.752);
             margin: 0%;
             padding: 0%;
         }
         main {
             background-color: white;
-            box-shadow: 0px 0px 20px rgb(52, 52, 80);
+            box-shadow: 0px 0px 20px rgb(82, 76, 56);
             width: 45%;
             padding: 15px;
             border-radius: 5px;
@@ -22,15 +22,16 @@
 
         main a {
             font-size: 1.2em;
+            color: white;
         }
     </style>
 </head>
 <body> 
     <main>
         <ul>
-            <li><a href="fonte001.html">Fontes em CSS</a></li>
-            <li><a href="fonte002.html">Testando Fontes Externas</a></li>
-            <li><a href="fonte003.html">Alinhamentos</a></li>
+            <li><a href="cor001.html">Cores em CSS</a></li>
+            <li><a href="cor002.html">Gradiente em CSS</a></li>
+            <li><a href="cor003.html">Exemplo</a></li>
         </ul>
     </main>
 </body>
